--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,16 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: FTP Deploy
-        # You may pin to the exact commit or the version.
-        # uses: SamKirkland/FTP-Deploy-Action@2a4e9b1312ebeb73a1f72b9330c71831c1e4ce01
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
-        with:
-          # ftp server
-          server: '${{ secrets.FTP_SEVER_NAME }} '
-          # ftp username
-          username: '${{ secrets.FTP_SERVER_USER }} '
-          # ftp password
-          password: '${{ secrets.FTP_SEVER_PW }} '
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v2.3.2
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.0.0
+      with:
+        server: ${{ secrets.FTP_SERVER_NAME}}
+        username: ${{ secrets.FTP_SERVER_USER}}
+        password: ${{ secrets.FTP_SERVER_PW}}
